2002-09-14  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile (SRCS): Add vcons-input.c.
	* vcons-input.c: New file.

	* vcons-scrollback.c (_cons_vcons_scrollback): New function.
	(cons_vcons_scrollback): Reimplement in terms of
	_cons_vcons_scrollback.
	* cons.h (cons_scroll_t): New type.
	(cons_vcons_scrollback): Update prototype.

	* priv.h (_cons_jump_down_on_input): New extern.
	(_cons_jump_down_on_output): Likewise.
	(_cons_vcons_scrollback): New prototype.
	* opts-std-startup.c (OPT_JUMP_DOWN_ON_INPUT): New macro.
	(OPT_JUMP_DOWN_ON_OUTPUT): Likewise.
	(_cons_jump_down_on_input): New variable.
	(_cons_jump_down_on_output): Likewise.
	(startup_options): Add new options --jump-down-on-input and
	--jump-down-on-output.
	(parse_startup_opt): Handle these new options.
	* file-changed.c (cons_S_file_changed): Support the jump down on
	output option.

2002-09-10  Marcus Brinkmann  <marcus@gnu.org>

	* file-changed.c (cons_S_file_changed): Fix typo in last change.

	* cons.h: New prototype for cons_vcons_set_scroll_lock.
	 (struct vcons): Add member FLAGS to state.
	* file-changed.c (cons_S_file_changed): Handle change of flags.
	* vcons-refresh.c (cons_vcons_refresh): Copy FLAGS field.
	Call cons_vcons_set_scroll_lock.

	* cons-switch.c (cons_switch): Initialize VCONS_ENTRY even if
	DELTA is negative.

2002-09-09  Marcus Brinkmann  <marcus@gnu.org>

	* Makefile (SRCS): Add vcons-scrollback.c.
	* vcons-scrollback.c: New file.
	* cons.h (struct vcons): Add SCROLLING member.
	* file-changed.c: Include <assert.h>.
	(cons_S_file_changed): Be careful to take VCONS->scrolling into
	account when doing clipping and scrolling.

	* cons-switch.c: Roll back to earlier version with vcons ->
	vcons_entry adjustments.  The user is now expected to hold a
	reference to the VCONS.
	* cons.h: Fix prototype, too.
	
	* vcons-open.c (cons_vcons_open): Initialize VCONS->lock,
	VCONS->input and VCONS->display.

	* vcons-remove.c: New file.
	* Makefile (SRCS): Add vcons-destroy.c.